--- a/_articles/RJ-2025-012/RJ-2025-012.Rmd
+++ b/_articles/RJ-2025-012/RJ-2025-012.Rmd
@@ -49,8 +49,8 @@ author:
 date: '2025-09-08'
 date_received: '2023-07-02'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 15
+  lastpage: 35
 volume: 17
 issue: 2
 slug: RJ-2025-012
