--- a/_articles/RJ-2025-013/RJ-2025-013.Rmd
+++ b/_articles/RJ-2025-013/RJ-2025-013.Rmd
@@ -37,8 +37,8 @@ author:
 date: '2025-09-08'
 date_received: '2024-01-11'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 35
+  lastpage: 56
 volume: 17
 issue: 2
 slug: RJ-2025-013
