--- a/_articles/RJ-2025-016/RJ-2025-016.tex
+++ b/_articles/RJ-2025-016/RJ-2025-016.tex
@@ -160,7 +160,7 @@ head(pdbs)
 \end{verbatim}
 
 \begin{verbatim}
-#> [1] "9RXG" "2PGH" "3PEL" "3GOU" "6IHX" "1G08"
+#> [1] "2PGH" "3PEL" "3GOU" "6IHX" "1G08" "1G09"
 \end{verbatim}
 
 Another refined search strategy involves querying the PDB using PubMed ID numbers. This approach allows researchers to find structures that are directly linked to specific scientific publications, ensuring a bridge between the structural data and the corresponding bibliographic sources.
@@ -425,7 +425,7 @@ head(results)
 \end{verbatim}
 
 \begin{verbatim}
-#> [1] "10GS_2" "13GS_2" "13GS_4" "1914_2" "19GS_4" "1A1G_4"
+#> [1] "12GS_3" "13GS_4" "1A1F_4" "1A1J_4" "1A2C_5" "1A3B_4"
 \end{verbatim}
 
 Faceted queries (or facets) add another layer of functionality to the perform\_search function by allowing users to group and perform calculations on PDB data through a simple search query. Facets organize search results into categories, or ``buckets,'' based on specified field values.
@@ -503,7 +503,7 @@ protein_entities
 \end{verbatim}
 
 \begin{verbatim}
-#>  [1] "2CU1" "1QH4" "1B3Q" "5T8Q" "1E19" "6XX8" "1ZP9" "1U6R" "1V0B" "6RJ4"
+#>  [1] "1QK1" "1U0R" "1RQF" "4UY9" "7L26" "1V0P" "4G3D" "7ZP0" "5CEN" "6CD6"
 \end{verbatim}
 
 The search retrieves PDB entries associated with protein kinases. We then select the first 10 entries for further analysis. The next step involves retrieving the amino acid sequences for these proteins and performing multiple sequence alignment using the \CRANpkg{msa} package.
@@ -635,7 +635,7 @@ head(ids)
 \end{verbatim}
 
 \begin{verbatim}
-#> [1] "2Y9H" "5FCL" "4ILM" "4XTK" "7EI1" "6TUG"
+#> [1] "2Y9H" "4ILM" "4XTK" "5FCL" "7EI1" "6TUG"
 \end{verbatim}
 
 The data fetched by \texttt{data\_fetcher} is structured as a dataframe for analytical convenience, with entries uniquely identified and their deposit dates converted to a standard date format to facilitate temporal analysis.
@@ -656,11 +656,11 @@ head(df)
 #>   ID    molecular_weight method            deposit_date        
 #>   <chr> <chr>            <chr>             <chr>               
 #> 1 2Y9H  240.96           X-RAY DIFFRACTION 2011-02-14T00:00:00Z
-#> 2 5FCL  226.22           X-RAY DIFFRACTION 2015-12-15T00:00:00Z
-#> 3 4ILM  302.01           X-RAY DIFFRACTION 2012-12-31T00:00:00Z
-#> 4 4XTK  309.28           X-RAY DIFFRACTION 2015-01-23T00:00:00Z
+#> 2 4ILM  302.01           X-RAY DIFFRACTION 2012-12-31T00:00:00Z
+#> 3 4XTK  226.22           X-RAY DIFFRACTION 2015-12-15T00:00:00Z
+#> 4 5FCL  680.57           X-RAY DIFFRACTION 2021-03-30T00:00:00Z
 #> 5 7EI1  416.5            X-RAY DIFFRACTION 2020-01-07T00:00:00Z
-#> 6 6TUG  145.07           X-RAY DIFFRACTION 2010-11-30T00:00:00Z
+#> 6 6TUG  147.1            X-RAY DIFFRACTION 2009-03-18T00:00:00Z
 \end{verbatim}
 
 Subsequent processing extracts the deposit year for each entry, enabling the aggregation of data on an annual basis.
@@ -729,7 +729,7 @@ df
 #>   <chr>  <chr>            <chr>                <chr>      <chr>   
 #> 1 4HHB_1 9606             Homo sapiens         120        100     
 #> 2 12CA_1 9606             Homo sapiens         5          100     
-#> 3 3PQR_1 9913             Bos taurus           1251       100
+#> 3 3PQR_1 9913             Bos taurus           1253       100
 \end{verbatim}
 
 For more examples and details on additional functionalities, please consult the package documentation.
@@ -1048,17 +1048,17 @@ structural_data
 \end{verbatim}
 
 \begin{verbatim}
-#>    PDB_ID Resolution R_free R_work Molecular_Weight Citation_Year
-#> 1    2BUF       2.95 0.2668 0.2491           387.63          2006
-#> 2    2J4L       2.80 0.2780 0.2460           306.18          2007
-#> 3    4O75       1.55 0.1993 0.1568            15.80          2014
-#> 4    2VA1       2.50 0.2850 0.2320           170.10          2007
-#> 5    2J4J       2.10 0.2420 0.2150           155.46          2007
-#> 6    2V4Y       2.80 0.2387 0.2074           162.27          2008
-#> 7    1PHK       2.10 0.2880 0.2100            34.93          1995
-#> 8    5T8P       2.32 0.2320 0.1810            77.96          2017
-#> 9    7M0K       2.01 0.2780 0.2477           131.51          2021
-#> 10   4IDV       2.90 0.2694 0.2033           158.05          2013
+#>    PDB_ID Resolution  R_free  R_work Molecular_Weight Citation_Year
+#> 1    6GWV       2.80 0.25930 0.23330           519.45          2018
+#> 2    2VA1       2.50 0.28500 0.23200           170.10          2007
+#> 3    2KDC         NA      NA      NA            39.37          2009
+#> 4    3JU6       2.45 0.25400 0.21400           171.77          2010
+#> 5    1Z0Z       2.85 0.27500 0.20800           126.81          2005
+#> 6    1SUW       2.45 0.25220 0.21100           114.60          2005
+#> 7    4IDT       2.40 0.22760 0.19110            79.01          2013
+#> 8    3NWY       2.47 0.26859 0.20474           181.30          2011
+#> 9    7KAC       1.85 0.23180 0.21670            77.02          2021
+#> 10   8FKO       2.10 0.25800 0.21990           224.68          2023
 \end{verbatim}
 
 This example demonstrates how to integrate the get\_info function into a more extensive workflow that includes searching for specific proteins, aligning their sequences, calculating pairwise sequence similarity, and retrieving associated structural and experimental information. The combination of sequence analysis and detailed structural data retrieval enables comprehensive studies on protein function, evolutionary relationships, and potential applications in drug design.
@@ -1352,14 +1352,14 @@ covid_paper_titles
 #> $`2Y9H`
 #> [1] "An RNA-Induced Conformational Change Required f..."
 #> 
-#> $`5FCL`
-#> [1] "Structural plasticity and in vivo activity of C..."
-#> 
 #> $`4ILM`
 #> [1] "Recognition and cleavage of a nonstructured CRI..."
 #> 
 #> $`4XTK`
 #> [1] "Crystal structure and nuclease activity of tm17..."
+#> 
+#> $`5FCL`
+#> [1] "Structural plasticity and in vivo activity of C..."
 #> 
 #> $`7EI1`
 #> [1] "A distinct structure of Cas1-Cas2 complex provi..."
@@ -1461,12 +1461,12 @@ head(pdb_analysis_df_truncated)
 
 \begin{verbatim}
 #>   PDB_ID Number_of_Papers                                       Paper_Titles
-#> 1   4EEQ                1 Design, Synthesis and Activity Evaluation of Po...
-#> 2   3GDE                1 ATP-dependent DNA ligase from Archaeoglobus ful...
-#> 3   3JSN                1 Structure of the adenylation domain of NAD(+)-d...
-#> 4   2HIV                1 A Flexible Interface between DNA Ligase and PCN...
-#> 5   3BA8                1 Structural Basis for the Inhibition of Bacteria...
-#> 6   3PN1                1 Novel Bacterial NAD+-Dependent DNA Ligase Inhib...
+#> 1   1B04                1 Structure of the adenylation domain of an NAD+-...
+#> 2   4EEQ                1 Design, Synthesis and Activity Evaluation of Po...
+#> 3   3JSL                1 Structure of the adenylation domain of NAD(+)-d...
+#> 4   3RR5                1 ATP-dependent DNA ligase from Thermococcus sp. ...
+#> 5   2HIV                1 A Flexible Interface between DNA Ligase and PCN...
+#> 6   6JX5                1 Structural insights into a HECT-type E3 ligase ...
 \end{verbatim}
 
 To identify common themes and keywords in the related papers, we perform a word frequency analysis. This involves creating a text corpus, cleaning the text, and generating a word cloud that visually represents the most frequent terms.
