--- a/_articles/RJ-2025-018/RJ-2025-018.Rmd
+++ b/_articles/RJ-2025-018/RJ-2025-018.Rmd
@@ -45,8 +45,8 @@ author:
 date: '2025-09-09'
 date_received: '2024-10-01'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 230
+  lastpage: 257
 volume: 17
 issue: 2
 slug: RJ-2025-018
