--- a/_articles/RJ-2025-019/RJ-2025-019.Rmd
+++ b/_articles/RJ-2025-019/RJ-2025-019.Rmd
@@ -32,8 +32,8 @@ author:
 date: '2025-09-23'
 date_received: '2024-05-24'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 175
+  lastpage: 205
 volume: 17
 issue: 2
 slug: RJ-2025-019
