--- a/_news/RJ-2025-2-cran/RJ-2025-2-cran.Rmd
+++ b/_news/RJ-2025-2-cran/RJ-2025-2-cran.Rmd
@@ -27,6 +27,9 @@ preamble: \usepackage{float, longtable}
 volume: 17
 issue: 2
 slug: RJ-2025-2-cran
+journal:
+  lastpage: 262
+  firstpage: 261
 
 ---
 
