--- a/_news/RJ-2025-2-rfoundation/RJ-2025-2-rfoundation.Rmd
+++ b/_news/RJ-2025-2-rfoundation/RJ-2025-2-rfoundation.Rmd
@@ -9,12 +9,15 @@ author:
   email: Torsten.Hothorn@R-project.org
   orcid: 0000-0001-8301-0471
 output:
-  rjtools::rjournal_web_article:
+  rjtools::rjournal_article:
     self_contained: yes
     toc: no
 volume: 17
 issue: 2
 slug: RJ-2025-2-rfoundation
+journal:
+  lastpage: 263
+  firstpage: 263
 
 ---
 
@@ -26,7 +29,7 @@ Membership fees and donations received between
 
 ## Donations
 
-Richard COUSINEAU (Canada)
+Richard Cousineau (Canada)
 
 ## Supporting institutions
 
@@ -40,7 +43,7 @@ University of Iowa, Iowa City (United States)
 ## Supporting members
 
 Vedo Alagic (Austria)
-jose alaya (Peru)
+Jose Alaya (Peru)
 Kristoffer Winther Balling (Denmark)
 Maurice Baudet von Gersdorff (Germany)
 Amit Behera (United States)
@@ -87,7 +90,7 @@ Mauro Lepore (United States)
 Eric Lim (United Kingdom)
 Michal Majka (Austria)
 Ivan Marino (Italy)
-harvey minnigh (Puerto Rico)
+Harvey Minnigh (Puerto Rico)
 David Monterde (Spain)
 Markus Näpflin (Switzerland)
 Maciej Nasinski (Poland)
@@ -95,7 +98,7 @@ Mark Niemann-Ross (United States)
 Jens Oehlschlägel (Germany)
 Jaesung James Park (Korea, Republic of)
 Matt Parker (United States)
-josiah parry (United States)
+Josiah Parry (United States)
 Bill Pikounis (United States)
 Kelly Pisane (Netherlands)
 Dominic Schuhmacher (Germany)
@@ -114,4 +117,4 @@ Mark van der Loo (Netherlands)
 Frans van Dunné (Costa Rica)
 Vincent van Hees (Netherlands)
 Fredrik Wartenberg (Sweden)
-杨(Yang) 胡(Hu) (New Zealand)
+Yang Hu (New Zealand)
