--- a/_articles/RJ-2025-011/ctv.tex
+++ b/_articles/RJ-2025-011/ctv.tex
@@ -15,7 +15,7 @@ CRAN Task Views have been available on the Comprehensive R Archive Network since
 The Comprehensive R Archive Network (CRAN, \url{https://CRAN.R-project.org/}), comprised
 of approximately one hundred mirror pages around the world along with a content-delivery network (CDN), is the canonical site
 for downloading not only the base R system \citep{r-base} but also more than twenty thousand extension packages
-(actually, 22663 at the time of writing) contributed by users from
+(actually, 22753 at the time of writing) contributed by users from
 the R community. CRAN is a very useful resource within the R
 ecosystem, but its content can be hard to grasp and navigate. Especially users new to R
 can struggle with getting started and finding the relevant R packages for the
@@ -68,8 +68,8 @@ This setup worked sufficiently well in 2005 when there were about 500~packages o
 initially 4~task views, listing on average 20~packages each. (Within a year, the
 number of task views increased to 12.)
 But by now there are 48~task views, with median and mean numbers of CRAN
-packages covered 110 and~123, respectively.
-Overall, these task views cover 4939~CRAN packages,
+packages covered 112 and~123, respectively.
+Overall, these task views cover 4940~CRAN packages,
 which is about 22\% of all CRAN packages.
 This change in scope and scale necessitated a change in infrastructure and workflows
 that the new \emph{CRAN Task View Initiative}, described in detail in the next section,
@@ -190,8 +190,8 @@ ctv::ctv("Econometrics")
 #> Version:    2025-09-01
 #> Repository: https://CRAN.R-project.org
 #> Source:     https://github.com/cran-task-views/Econometrics/
-#> Packages:   AER*, alpaca, aod, apollo, apt, bacondecomp, bayesm, betareg, bife,
-#>             bimets, BMA, BMS, boot, bootstrap, brglm, CADFtest, car*, censReg,
+#> Packages:   AER*, aod, apollo, apt, bacondecomp, bayesm, betareg, bimets, BMA,
+#>             BMS, boot, bootstrap, brglm, CADFtest, car*, censReg, clubSandwich,
 ...
 \end{verbatim}
 
@@ -242,7 +242,6 @@ ctv::ctv("Econometrics")$citation
 #>     note = {Version 2025-09-01},
 #>     url = {https://CRAN.R-project.org/view=Econometrics},
 #>   }
-NA
 \end{verbatim}
 
 \section{Contributing}\label{sec:contributing}
