--- a/_articles/RJ-2025-012/RJ-2025-012.Rmd
+++ b/_articles/RJ-2025-012/RJ-2025-012.Rmd
@@ -10,9 +10,8 @@ abstract: |
   and toxicity outcomes based on cumulative and pending data
   (time-to-event BOIN-ET: TITE-BOIN-ET), ordinal graded efficacy and
   toxicity outcomes (generalized BOIN-ET: gBOIN-ET), and their
-  combination (TITE-gBOIN-ET).
-  [**boinet**](https://CRAN.R-project.org/package=boinet) package is an
-  R package to implement the BOIN-ET design family. The package supports
+  combination (TITE-gBOIN-ET). The R package boinet implements the
+  BOIN-ET design family. The package supports
   the conduct of simulation studies to assess operating characteristics
   of BOIN-ET, TITE-BOIN-ET, gBOIN-ET, and TITE-gBOIN-ET designs, where
   users can choose design parameters in flexible and straightforward
@@ -46,11 +45,11 @@ author:
   - Japan
   - |
     [kazushi.maruo@gmail.com](kazushi.maruo@gmail.com){.uri}
-date: '2025-09-08'
+date: '2025-09-23'
 date_received: '2023-07-02'
 journal:
-  firstpage: 15
-  lastpage: 35
+  firstpage: ~
+  lastpage: []
 volume: 17
 issue: 2
 slug: RJ-2025-012
@@ -140,16 +139,16 @@ ordinal graded efficacy and toxicity data for the dose-escalation
 decision. @takeda:2023 proposed time-to-event generalized BOIN-ET
 (TITE-gBOIN-ET) to address simultaneously the aforementioned challenges
 of the late-onset ordinal graded efficacy and toxicity outcomes.
-[**Keyboard**](https://CRAN.R-project.org/package=Keyboard) package
+[**Keyboard**](https://CRAN.R-project.org/package=Keyboard)
 [@xiaomeng:2025] and
-[**escalation**](https://CRAN.R-project.org/package=escalation) package
+[**escalation**](https://CRAN.R-project.org/package=escalation)
 [@kristian:2024] are existing R packages that implement other types of
 the OBD-finding designs, while there are no R packages that provide
 functions to implement the BOIN-ET, TITE-BOIN-ET, gBOIN-ET, and
 TITE-gBOIN-ET design.
 
-[**boinet**](https://CRAN.R-project.org/package=boinet) package
-[@yamaguchi:2025] is an R package to implement the BOIN-ET design
+The [**boinet**](https://CRAN.R-project.org/package=boinet)
+[@yamaguchi:2025] package implements the BOIN-ET design
 family. The package supports the conduct of simulation studies to assess
 operating characteristics of BOIN-ET, TITE-BOIN-ET, gBOIN-ET, and
 TITE-gBOIN-ET, where users can choose design parameters in flexible and
@@ -606,7 +605,7 @@ These simulation study settings were given by:
 > accrual <- 10  # Ten days of accrual rate
 ```
 
-![Figure 1: Dose-toxicity and dose-efficacy relationship considered in
+![(#fig:1) Dose-toxicity and dose-efficacy relationship considered in
 simulation study.](figure1.png){width="100%"
 alt="graphic without alt text"}
 
@@ -633,8 +632,7 @@ boinet(
   n.sim=1000, seed.sim=100)
 ```
 
-Some of the key arguments are detailed in Table 1, 2, 3, and 4 in
-Appendix. Here, `toxprob` and `effprob` are vectors of true toxicity and
+Some of the key arguments are detailed in Tables \@ref(tab:T1), \@ref(tab:T2), \@ref(tab:T3), and \@ref(tab:T4), in the Appendix. Here, `toxprob` and `effprob` are vectors of true toxicity and
 efficacy probabilities with a length equal to the number of dose levels
 investigated.
 
@@ -734,8 +732,7 @@ tite.boinet(
   n.sim=1000, seed.sim=100)
 ```
 
-Some of the key arguments are detailed in Table 1, 2, 3, and 4 in
-Appendix. It should be noted that the TITE-BOIN-ET design has a
+Some of the key arguments are detailed in Tables \@ref(tab:T1), \@ref(tab:T2), \@ref(tab:T3), and \@ref(tab:T4), in the Appendix. It should be noted that the TITE-BOIN-ET design has a
 suspension rule which holds off the decision on dose allocation (i.e.,
 patient enrollment to the next cohort) until adequate information is
 collected, where the dose allocation is allowed only if more than 50% of
@@ -830,8 +827,7 @@ gboinet(
   n.sim=1000, seed.sim=100)
 ```
 
-Some of the key arguments are detailed in Table 1, 2, 3, and 4 in
-Appendix. Here, `toxprob` and `effprob` are matrices of true
+Some of the key arguments are detailed in Tables \@ref(tab:T1), \@ref(tab:T2), \@ref(tab:T3), and \@ref(tab:T4), in the Appendix. Here, `toxprob` and `effprob` are matrices of true
 quasi-Bernoulli toxicity and efficacy probabilities with a row length
 equal to the number of outcome categories and a column length equal to
 the number of dose levels investigated. `sev.weight` and `res.weight`
@@ -849,7 +845,7 @@ efficacy probabilities as given in Figure 1(b):
 +                  c(0.10,0.20,0.34,0.28,0.31,0.34),
 +                  c(0.05,0.10,0.15,0.18,0.21,0.24),
 +                  c(0.03,0.05,0.10,0.12,0.14,0.16))
-> 
+>
 > effprob <- rbind(c(0.30,0.20,0.05,0.05,0.05,0.05),
 +                  c(0.35,0.30,0.25,0.20,0.15,0.10),
 +                  c(0.30,0.40,0.20,0.25,0.30,0.30),
@@ -954,8 +950,7 @@ tite.gboinet(
   n.sim=1000, seed.sim=100)
 ```
 
-Some of the key arguments are detailed in Table 1, 2, 3, and 4 in
-Appendix. It should be noted that the TITE-gBOIN-ET design has a
+Some of the key arguments are detailed in Tables \@ref(tab:T1), \@ref(tab:T2), \@ref(tab:T3), and \@ref(tab:T4), in the Appendix. It should be noted that the TITE-gBOIN-ET design has a
 suspension rule which holds off the decision on dose allocation (i.e.,
 patient enrollment to the next cohort) until adequate information is
 collected, where the dose allocation is allowed only if more than 50% of
@@ -969,7 +964,7 @@ efficacy probabilities as given in Figure 1(b):
 +                  c(0.10,0.20,0.34,0.28,0.31,0.34),
 +                  c(0.05,0.10,0.15,0.18,0.21,0.24),
 +                  c(0.03,0.05,0.10,0.12,0.14,0.16))
-> 
+>
 > effprob <- rbind(c(0.30,0.20,0.05,0.05,0.05,0.05),
 +                  c(0.35,0.30,0.25,0.20,0.15,0.10),
 +                  c(0.30,0.40,0.20,0.25,0.30,0.30),
@@ -1067,9 +1062,7 @@ measures to select the OBD are applicable. The package would assist
 practitioners in efficiently assessing the design features of their
 studies.
 
- \
-
-## Appendix: Key arguments used in `boinet()`, `tite.boinet()`, `gboinet()`, and `tite.gboinet()` function
+## Appendix: Key arguments used in `boinet()`, `tite.boinet()`, `gboinet()`, and `tite.gboinet()` function {-}
 
 ::: {#tab:T1}
   -----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
