RJ-2025-13 plain text abstract

--- a/_articles/RJ-2025-013/RJ-2025-013.Rmd
+++ b/_articles/RJ-2025-013/RJ-2025-013.Rmd
@@ -3,13 +3,11 @@ title: Partitioned Local Depth (PaLD) Community Analyses in R
 abstract: |
   Partitioned Local Depth (PaLD) is a framework for holistic
   consideration of community structure for distance-based data. This
-  paper describes an R package,
-  [**pald**](https://CRAN.R-project.org/package=pald), for calculating
+  paper describes an R package, pald, for calculating
   Partitioned Local Depth (PaLD) probabilities, implementing community
   analyses, determining community clusters, and creating data
   visualizations to display community structure. We present essentials
-  of the PaLD approach, describe how to use the
-  [**pald**](https://CRAN.R-project.org/package=pald) package, walk
+  of the PaLD approach, describe how to use the pald package, walk
   through several examples, and discuss the method in relation to
   commonly used techniques.
 author:
@@ -34,11 +32,11 @@ author:
   - '27106'
   - |
     [`berenhks@wfu.edu`](mailto:berenhks@wfu.edu)
-date: '2025-09-08'
+date: '2025-09-24'
 date_received: '2024-01-11'
 journal:
-  firstpage: 35
-  lastpage: 56
+  firstpage: ~
+  lastpage: []
 volume: 17
 issue: 2
 slug: RJ-2025-013
