--- a/_articles/RJ-2025-013/dagostino-mcgowan.tex
+++ b/_articles/RJ-2025-013/dagostino-mcgowan.tex
@@ -6,7 +6,7 @@
 \maketitle
 
 \begin{abstract}%
-Partitioned Local Depth (PaLD) is a framework for holistic consideration of community structure for distance-based data. This paper describes an R package, \CRANpkg{pald}, for calculating Partitioned Local Depth (PaLD) probabilities, implementing community analyses, determining community clusters, and creating data visualizations to display community structure. We present essentials of the PaLD approach, describe how to use the \CRANpkg{pald} package, walk through several examples, and discuss the method in relation to commonly used techniques.
+Partitioned Local Depth (PaLD) is a framework for holistic consideration of community structure for distance-based data. This paper describes an R package, pald, for calculating Partitioned Local Depth (PaLD) probabilities, implementing community analyses, determining community clusters, and creating data visualizations to display community structure. We present essentials of the PaLD approach, describe how to use the pald package, walk through several examples, and discuss the method in relation to commonly used techniques.
 \end{abstract}
 
 \hypertarget{introduction}{%
