RJ-2025-14 plain text title and abstract

--- a/_articles/RJ-2025-014/RJ-2025-014.Rmd
+++ b/_articles/RJ-2025-014/RJ-2025-014.Rmd
@@ -1,18 +1,18 @@
 ---
-title: Student $t$-Lévy regression model in yuima
+title: Student t-Lévy regression model in yuima
 date: '2025-09-08'
 abstract: This paper presents an estimation and simulation method in the R package
-  \CRANpkg{yuima}  for a linear regression model driven by a Student-t Lévy process
-  with constant scale and arbitrary degrees of freedom. This process finds applications
-  in several fields, for example finance, physics, biology, etc. The first challenge
-  involves simulating sample paths at high-frequency levels, as only unit-time increments
-  are Student-t distributed. In \CRANpkg{yuima}, we solve this problem by means of
-  the inverse Fourier transform for simulating the increments of a Student-t Lévy
-  defined on an interval with any length. The second challenge is the joint estimation
-  of trend, scale, and degrees of freedom, a problem not previously explored in the
-  literature. In \CRANpkg{yuima}, we develop a two-step estimation procedure that
-  efficiently deals with this issue. Numerical examples are given in order to explain
-  methods and classes used in the \CRANpkg{yuima} package.
+  yuima  for a linear regression model driven by a Student-t Lévy process with constant
+  scale and arbitrary degrees of freedom. This process finds applications in several
+  fields, for example finance, physics, biology, etc. The first challenge involves
+  simulating sample paths at high-frequency levels, as only unit-time increments are
+  Student-t distributed. In yuima, we solve this problem by means of the inverse Fourier
+  transform for simulating the increments of a Student-t Lévy defined on an interval
+  with any length. The second challenge is the joint estimation of trend, scale, and
+  degrees of freedom, a problem not previously explored in the literature. In yuima,
+  we develop a two-step estimation procedure that efficiently deals with this issue.
+  Numerical examples are given in order to explain methods and classes used in the
+  yuima package.
 draft: no
 author:
 - name: Hiroki Masuda
@@ -146,9 +146,6 @@ date_received: '2024-03-08'
 volume: 17
 issue: 2
 slug: RJ-2025-014
-journal:
-  lastpage: 83
-  firstpage: 56
 
 ---
 
