--- a/_articles/RJ-2025-015/RJ-2025-015.tex
+++ b/_articles/RJ-2025-015/RJ-2025-015.tex
@@ -7,7 +7,7 @@
 \maketitle
 
 \abstract{%
-Fitting areal models which use a spatial weights matrix to represent relationships between geographical units can be a cumbersome task, particularly when these units are not well-behaved. The two chief aims of \CRANpkg{sfislands} are to simplify the process of creating an appropriate neighbourhood matrix, and to quickly visualise the predictions of subsequent models. The package uses visual aids in the form of easily-generated maps to help this process. This paper demonstrates how \CRANpkg{sfislands} could be useful to researchers. It begins by describing the package's functions in the context of a proposed workflow. It then presents two worked examples showing a selection of potential use-cases. These range from earthquakes in Indonesia, to river crossings in London. We aim to show how the \CRANpkg{sfislands} package streamlines much of the human workflow involved in creating and examining such models.
+Fitting areal models which use a spatial weights matrix to represent relationships between geographical units can be a cumbersome task, particularly when these units are not well-behaved. The two chief aims of sfislands are to simplify the process of creating an appropriate neighbourhood matrix, and to quickly visualise the predictions of subsequent models. The package uses visual aids in the form of easily-generated maps to help this process. This paper demonstrates how sfislands could be useful to researchers. It begins by describing the package's functions in the context of a proposed workflow. It then presents two worked examples showing a selection of potential use-cases. These range from earthquakes in Indonesia, to river crossings in London. We aim to show how the sfislands package streamlines much of the human workflow involved in creating and examining such models.
 }
 
 \section{Introduction}\label{introduction}
@@ -148,10 +148,10 @@ One solution when confronted with islands in a dataset is to simply exclude them
 \begin{verbatim}
 # output a named list
 
-st_bridges(rectangles, 
-           "name", 
-           remove_islands = TRUE, 
-           nb_structure = "list", 
+st_bridges(rectangles,
+           "name",
+           remove_islands = TRUE,
+           nb_structure = "list",
            add_to_dataframe = FALSE) |>
   head()
 \end{verbatim}
@@ -170,11 +170,11 @@ st_bridges(rectangles,
 \begin{verbatim}
 # output a named matrix
 
-st_bridges(rectangles, 
-           "name", 
-           remove_islands = TRUE, 
-           nb_structure = "matrix", 
-           add_to_dataframe = FALSE) |> 
+st_bridges(rectangles,
+           "name",
+           remove_islands = TRUE,
+           nb_structure = "matrix",
+           add_to_dataframe = FALSE) |>
   head()
 \end{verbatim}
 
@@ -192,10 +192,10 @@ neighbour, which is the default setting, and to return the output as a column ca
 \begin{verbatim}
 # output a named list as a column "nb" in original dataframe
 
-st_bridges(rectangles, 
-           "name", 
-           link_islands_k = 1, 
-           nb_structure = "list") |> 
+st_bridges(rectangles,
+           "name",
+           link_islands_k = 1,
+           nb_structure = "list") |>
   head()
 \end{verbatim}
 
@@ -216,10 +216,10 @@ st_bridges(rectangles,
 \begin{verbatim}
 # output a named matrix as a column "nb" in original dataframe
 
-st_bridges(rectangles, 
-           "name", 
-           link_islands_k = 1, 
-           nb_structure = "matrix") |> 
+st_bridges(rectangles,
+           "name",
+           link_islands_k = 1,
+           nb_structure = "matrix") |>
   head()
 \end{verbatim}
 
@@ -250,9 +250,9 @@ function as shown in Figure \ref{fig:rects2}.
 \begin{verbatim}
 # default is 'nodes = "point"'
 
-st_bridges(rectangles, 
-           "name", 
-           link_islands_k = 1) |> 
+st_bridges(rectangles,
+           "name",
+           link_islands_k = 1) |>
   st_quickmap_nb()
 \end{verbatim}
 
@@ -271,9 +271,9 @@ numerically rather than as points (Figure \ref{fig:rects3}).
 \begin{verbatim}
 # with 'nodes = "numeric"'
 
-st_bridges(rectangles, 
-           "name", 
-           link_islands_k = 1) |> 
+st_bridges(rectangles,
+           "name",
+           link_islands_k = 1) |>
   st_quickmap_nb(nodes = "numeric")
 \end{verbatim}
 
@@ -294,9 +294,9 @@ are not based on contiguity. It gives both the name and index number of each pai
 \begin{verbatim}
 # show summary of non-contiguous connections in a dataframe
 
-st_bridges(rectangles, 
-           "name", 
-           link_islands_k = 1) |> 
+st_bridges(rectangles,
+           "name",
+           link_islands_k = 1) |>
   st_check_islands()
 \end{verbatim}
 
@@ -314,9 +314,9 @@ by forcing a join (Figure \ref{fig:rects4}).
 \begin{verbatim}
 # add an extra connection using numeric index
 
-st_bridges(rectangles, "name", 
-           link_islands_k = 1) |> 
-  st_force_join_nb(3,4) |> 
+st_bridges(rectangles, "name",
+           link_islands_k = 1) |>
+  st_force_join_nb(3,4) |>
   st_quickmap_nb(nodes = "numeric")
 \end{verbatim}
 
@@ -338,10 +338,10 @@ names (Figure \ref{fig:rects5}).
 \begin{verbatim}
 # remove an existing connection using unit name, not index
 
-st_bridges(rectangles, "name", 
-           link_islands_k = 1) |> 
-  st_force_join_nb(3,4) |> 
-  st_force_cut_nb("Rect1","Rect2") |> 
+st_bridges(rectangles, "name",
+           link_islands_k = 1) |>
+  st_force_join_nb(3,4) |>
+  st_force_cut_nb("Rect1","Rect2") |>
   st_quickmap_nb(nodes = "numeric")
 \end{verbatim}
 
@@ -406,18 +406,18 @@ Consider the model structure described in the code below using \CRANpkg{mgcv} sy
 # creating an mgcv model
 
 mgcv::gam(
-  y ~ covariate +                   # fixed intercept and effect for covariate  
+  y ~ covariate +                   # fixed intercept and effect for covariate
     s(region, bs = "re") +                  # random intercept at level region
     s(region, covariate, bs = "re") +          # random slopes at level region
-    s(sub-region, 
+    s(sub-region,
       bs = 'mrf',
-      xt = list(nb = data$nb), 
+      xt = list(nb = data$nb),
       k = k) +                    # ICAR varying intercept at level sub-region
-    s(sub-region, by = covariate, 
+    s(sub-region, by = covariate,
       bs = 'mrf',
-      xt = list(nb = data$nb), 
+      xt = list(nb = data$nb),
       k = k),           # ICAR varying slope for covariate at level sub-region
-  data = data, 
+  data = data,
   method = "REML")
 \end{verbatim}
 
@@ -532,7 +532,7 @@ As this is count data, we will model it as a Poisson distribution with
 \(\lambda\) as the mean count per province. For \(i = 1,...,n\) provinces,
 the dependent variable in this model is
 \begin{equation}
-y_i = \text{earthquake count}_i 
+y_i = \text{earthquake count}_i
 \label{eq:eq1}
 \end{equation}
 while the explanatory variable is
@@ -628,15 +628,15 @@ is shown in Figure \ref{fig:ind-contig1}. Note how it can be styled with a combi
 # various arguments exist for altering colours and sizes
 # additional ggplot themes and layers can be added
 
-st_bridges(provinces_df, "province", link_islands_k = 2) |> 
-  st_quickmap_nb(fillcol = "antiquewhite1", 
-                 bordercol = "black", bordersize = 0.5, 
-                 linkcol = "darkblue", linksize = 0.8, 
-                 pointcol = "red", pointsize = 2) + 
-  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black", 
+st_bridges(provinces_df, "province", link_islands_k = 2) |>
+  st_quickmap_nb(fillcol = "antiquewhite1",
+                 bordercol = "black", bordersize = 0.5,
+                 linkcol = "darkblue", linksize = 0.8,
+                 pointcol = "red", pointsize = 2) +
+  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black",
                                         linewidth=1.5),
         axis.text = element_blank()) +
-  geom_sf(data=nearby_countries_df, 
+  geom_sf(data=nearby_countries_df,
           fill="gray50", linewidth=0.5, colour="black")
 \end{verbatim}
 
@@ -677,15 +677,15 @@ show concave hulls drawn around each unit (using \texttt{concavehull\ =\ TRUE}).
 \begin{verbatim}
 # with 'concavehull = TRUE' and 'nodes = "numeric"'
 
-st_bridges(provinces_df, "province", link_islands_k = 2) |> 
-  st_quickmap_nb(fillcol = "antiquewhite1", 
-                 bordercol = "black", bordersize = 0.5, 
-                 linkcol = "tomato", linksize = 0.5, 
-                 nodes = "numeric", 
-                 numericcol = "black", numericsize = 6, 
-                 concavehull = TRUE, 
-                 hullcol = "darkgreen", hullsize = 0.2) + 
-  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black", 
+st_bridges(provinces_df, "province", link_islands_k = 2) |>
+  st_quickmap_nb(fillcol = "antiquewhite1",
+                 bordercol = "black", bordersize = 0.5,
+                 linkcol = "tomato", linksize = 0.5,
+                 nodes = "numeric",
+                 numericcol = "black", numericsize = 6,
+                 concavehull = TRUE,
+                 hullcol = "darkgreen", hullsize = 0.2) +
+  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black",
                                         linewidth=1.5),
         axis.text = element_blank())
 \end{verbatim}
@@ -720,18 +720,18 @@ joins_df <- tribble(
   22, 28
 )
 
-st_bridges(provinces_df, "province", link_islands_k = 2) |> 
-  st_force_join_nb(xy_df = joins_df) |> 
-  st_force_cut_nb(19,22) |> 
-  st_quickmap_nb(fillcol = "antiquewhite1", 
-                 bordercol = "black", bordersize = 0.5, 
-                 linkcol = "darkblue", linksize = 0.8, 
-                 pointcol = "red", pointsize = 2) + 
-  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black", 
+st_bridges(provinces_df, "province", link_islands_k = 2) |>
+  st_force_join_nb(xy_df = joins_df) |>
+  st_force_cut_nb(19,22) |>
+  st_quickmap_nb(fillcol = "antiquewhite1",
+                 bordercol = "black", bordersize = 0.5,
+                 linkcol = "darkblue", linksize = 0.8,
+                 pointcol = "red", pointsize = 2) +
+  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black",
                                         linewidth=1.5),
         axis.text = element_blank()) +
-  geom_sf(data=nearby_countries_df, 
-          fill="gray50", linewidth=0.5, colour="black") + 
+  geom_sf(data=nearby_countries_df,
+          fill="gray50", linewidth=0.5, colour="black") +
   annotation_scale()
 \end{verbatim}
 
@@ -749,7 +749,7 @@ st_bridges(provinces_df, "province", link_islands_k = 2) |>
 We now create the ICAR model using, in this case, the \CRANpkg{mgcv} package. We will be able to use the output of \texttt{st\_bridges}, which we have named \texttt{prep\_data}, as both the data source for the model and the neighbourhood structure (by specifying the column \texttt{nb} which contains the neighbourhood list).
 
 \begin{verbatim}
-mod_pois_mrf <- gam(damaging_quakes_total ~ 
+mod_pois_mrf <- gam(damaging_quakes_total ~
                       fault_concentration +
                       s(province, bs='mrf', xt=list(nb=prep_data$nb), k=24) +
                       offset(log(area_province)),
@@ -816,11 +816,11 @@ these estimates for \(\gamma_i\) on a map, as shown in Figure \ref{fig:ind-mrf1}
 \begin{verbatim}
 # st_quickmap_preds() outputs a list of ggplots
 
-plot_mrf <- mod_pois_mrf |> 
+plot_mrf <- mod_pois_mrf |>
   st_augment(prep_data) |>
   st_quickmap_preds(scale_low = "darkgreen",
-                    scale_mid = "ivory", 
-                    scale_high = "darkred", 
+                    scale_mid = "ivory",
+                    scale_high = "darkred",
                     scale_midpoint = 0)
 
 # in this case, there is only one plot in the list
@@ -829,12 +829,12 @@ plot_mrf <- mod_pois_mrf |>
 
 plot_mrf[[1]] +
   coord_sf(datum=NA, default = TRUE) +
-  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black", 
+  theme(panel.background = element_rect(fill = "#ECF6F7", colour = "black",
                                         linewidth=1.5),
         axis.text = element_blank()) +
-  geom_sf(data=provinces_df, fill=NA, colour="black", linewidth=0.5) + 
-  geom_sf(data=nearby_countries_df, fill="gray50", colour="black", 
-          linewidth=0.5) + 
+  geom_sf(data=provinces_df, fill=NA, colour="black", linewidth=0.5) +
+  geom_sf(data=nearby_countries_df, fill="gray50", colour="black",
+          linewidth=0.5) +
   labs(fill="relative\nincidence") +
   annotation_scale() +
   coord_sf(datum=NA, default = TRUE) +
@@ -882,7 +882,7 @@ prep_data <- st_bridges(provinces_df, "province")
 
 # 2. define model
 
-mod <- gam(quake_mlxl_total ~ 
+mod <- gam(quake_mlxl_total ~
                   fault_concentration +
                   s(province, bs='mrf', xt=list(nb=prep_data$nb), k=22) +
                   offset(log(area_province)),
@@ -905,7 +905,7 @@ function is applied to them to construct a queen contiguity
 neighbourhood structure. As can be seen from the \texttt{st\_check\_islands()} function, this collection of London wards contains no isolated units.
 
 \begin{verbatim}
-st_bridges(london, "GSS_CODE") |> 
+st_bridges(london, "GSS_CODE") |>
   st_check_islands()
 \end{verbatim}
 
@@ -923,10 +923,10 @@ The \texttt{st\_quickmap\_nb()} function gives an immediate visual representatio
 # same as sfdep:st_contiguity() as there are no islands
 # an extra layer for the river Thames
 
-st_bridges(london, "GSS_CODE") |> 
-  st_quickmap_nb() + 
-  geom_sf(data=thames, colour="blue", linewidth=1.5) + 
-  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black", 
+st_bridges(london, "GSS_CODE") |>
+  st_quickmap_nb() +
+  geom_sf(data=thames, colour="blue", linewidth=1.5) +
+  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black",
                                         linewidth=1.5))
 \end{verbatim}
 
@@ -953,12 +953,12 @@ riverside <- thames |> st_intersects(london) |> unlist() |> unique()
 
 # only map these wards
 
-st_bridges(london[riverside,],"NAME") |> 
+st_bridges(london[riverside,],"NAME") |>
   st_quickmap_nb(linksize = 0.5) +
-  geom_sf(data=thames, colour="blue", linewidth=1.5) + 
+  geom_sf(data=thames, colour="blue", linewidth=1.5) +
   annotation_scale(location="br") +
-  coord_sf(datum=NA) + 
-  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black", 
+  coord_sf(datum=NA) +
+  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black",
                                         linewidth=1.5))
 \end{verbatim}
 
@@ -991,16 +991,16 @@ crossing (see Figure \ref{fig:lon-contig3}).
 \begin{verbatim}
 # with 'nodes = "numeric"'
 
-st_bridges(london[riverside,],"NAME") |> 
+st_bridges(london[riverside,],"NAME") |>
   st_quickmap_nb(nodes = "numeric", numericsize = 4, linksize = 0.5) +
-  geom_sf(data=no_touch_buffer, fill="pink", alpha=0.3) + 
-  geom_sf(data=crossings_roadped |> st_buffer(1000), 
+  geom_sf(data=no_touch_buffer, fill="pink", alpha=0.3) +
+  geom_sf(data=crossings_roadped |> st_buffer(1000),
           fill="darkgreen", alpha=0.3) +
-  geom_sf(data=thames, colour="blue", linewidth=1.5) + 
-  geom_sf(data=crossings_roadped, size=1, colour="yellow") + 
+  geom_sf(data=thames, colour="blue", linewidth=1.5) +
+  geom_sf(data=crossings_roadped, size=1, colour="yellow") +
   annotation_scale(location="br") +
-  coord_sf(datum=NA) + 
-  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black", 
+  coord_sf(datum=NA) +
+  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black",
                                         linewidth=1.5))
 \end{verbatim}
 
@@ -1035,16 +1035,16 @@ cut_df <- tribble(
   39, 65,
   1, 2
 )
-st_bridges(london[riverside,], "NAME") |> 
-  st_force_cut_nb(xy_df = cut_df) |> 
+st_bridges(london[riverside,], "NAME") |>
+  st_force_cut_nb(xy_df = cut_df) |>
   st_quickmap_nb(bordercol = "black", bordersize = 0.5, linksize = 0.5) +
-  geom_sf(data=no_touch_buffer, fill = "pink", alpha = 0.3) + 
-  geom_sf(data=crossings_roadped |> st_buffer(1000), 
+  geom_sf(data=no_touch_buffer, fill = "pink", alpha = 0.3) +
+  geom_sf(data=crossings_roadped |> st_buffer(1000),
           fill= "darkgreen", alpha = 0.3) +
   geom_sf(data=thames, colour = "blue", linewidth = 1.5) +
   annotation_scale(location = "br") +
-  coord_sf(datum=NA) + 
-  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black", 
+  coord_sf(datum=NA) +
+  theme(panel.background = element_rect(fill = "#F6F3E9", colour = "black",
                                         linewidth = 1.5))
 \end{verbatim}
 
