RJ-2025-018 fixed most problems

--- a/_articles/RJ-2025-018/RJ-2025-018.Rmd
+++ b/_articles/RJ-2025-018/RJ-2025-018.Rmd
@@ -1,9 +1,8 @@
 ---
 title: 'CvmortalityMult: Cross-Validation for Multi-Population Mortality Models'
 abstract: |
-  This article presents the
-  [CvmortalityMult](https://cran.r-project.org/web/packages/CvmortalityMult/index.html)
-  *R* package, a novel tool designed for modelling, forecasting and
+  This article presents the CvmortalityMult
+  R package, a novel tool designed for modelling, forecasting and
   evaluating mortality models for several populations. The package
   facilitates the fitting and forecasting of multipopulation mortality
   models, providing accurate projections in an increasingly
@@ -13,8 +12,8 @@ abstract: |
   accuracy of multipopulation mortality models for specific countries or
   regions within a country. Through an empirical application to Spanish
   regions, we demonstrate the efficacy and simplicity of the
-  [CvmortalityMult](https://cran.r-project.org/web/packages/CvmortalityMult/index.html)
-  *R* package in selecting and evaluating multipopulation mortality
+  CvmortalityMult
+  R package in selecting and evaluating multipopulation mortality
   models. By providing accessible tools for mortality modelling,
   forecasting and testing, this package stands out as a valuable
   resource for advancing the understanding and forecasting of mortality
@@ -45,8 +44,8 @@ author:
 date: '2025-09-09'
 date_received: '2024-10-01'
 journal:
-  firstpage: 230
-  lastpage: 257
+  firstpage: ~
+  lastpage: []
 volume: 17
 issue: 2
 slug: RJ-2025-018
@@ -693,14 +692,9 @@ as a data frame and include the following variables:
 - `label`: A tag indicating the dataset type, either "Spain regions" or
   "Spain National population".
 
-<figure id="Spainmap">
-<div class="center">
-<img src="mapa_cas.png" style="width:100.0%"
-alt="graphic without alt text" />
-</div>
-<figcaption>Figure 4: Administrative structure of Spain (regions are
-referred to as autonomous communities).</figcaption>
-</figure>
+![Figure 4: Administrative structure of Spain (regions are
+referred to as autonomous communities).](mapa_cas.png){#fig4 width="100%"
+alt="graphic without alt text"}
 
 Furthermore, we have included the dataset `regions`, which contains the
 geographical values of the Spanish regions. The `SpainMap` function
@@ -1186,13 +1180,13 @@ This CV function requires the following information as input:
   align with the total number of periods provided by the user as
   (`periods`).
 
-- `fixed_train_origin = ``c(TRUE, FALSE, ’add_remove1’)` is a logical
+- `fixed_train_origin = c(TRUE, FALSE, ’add_remove1’)` is a logical
   variable that specifies whether the starting point of the initial
   training set remains fixed throughout the CV process. This option
   allows users to maintain a constant starting point where the model
   will be fitted in every iteration or allow it to shift, thereby
   determining whether a rolling window evaluation is applied. By
-  default, the package sets `fixed_train_origin = ``TRUE`, meaning that
+  default, the package sets `fixed_train_origin = TRUE`, meaning that
   the first period in the training set remains fixed across all
   iterations and the model recalibrations of the CV method. However,
   users can opt to allow the training set starting point to shift by
@@ -1231,10 +1225,10 @@ following CV techniques can be applied:
 
 1.  **Fixed-origin evaluation** is implemented by setting the arguments
     so that `nahead` + `trainset1` = `periods` while keeping the default
-    value of `fixed_train_origin = ``TRUE`.
+    value of `fixed_train_origin = TRUE`.
 
 2.  **RO-recalibration evaluation** requires that `trainset1` \> 2 and
-    that `fixed_train_origin = ``TRUE` remain at its default value,
+    that `fixed_train_origin = TRUE` remain at its default value,
     regardless of the value assigned to `nahead`. Specifically, when
     `nahead = 1`, leave-one-out CV (LOOCV) is applied. When
     `nahead = trainset1`, k-fold CV (CV) is performed. For all other
@@ -1242,21 +1236,21 @@ following CV techniques can be applied:
     origin of the first training set fixed in all possible options.
 
 3.  **Rolling-window evaluation** requires setting
-    `fixed_train_origin = ``FALSE` or
-    `fixed_train_origin = ``’add_remove1’`, independently of the values
+    `fixed_train_origin = FALSE` or
+    `fixed_train_origin = ’add_remove1’`, independently of the values
     assigned to `nahead` and `trainset1`. As in the previous CV
     technique, if `nahead = 1`, a LOOCV approach with a rolling window
     of 1 is applied, which remains equivalent whether
     `fixed_train_origin` is set to `FALSE` or `’add_remove1’`. When
-    `nahead > 1` and `fixed_train_origin = ``FALSE`, the training set is
+    `nahead > 1` and `fixed_train_origin = FALSE`, the training set is
     updated by incorporating and discarding `nahead` periods in each
-    iteration. Conversely, when `fixed_train_origin = ``’add_remove1’`,
+    iteration. Conversely, when `fixed_train_origin = ’add_remove1’`,
     the training set updates by adding and removing only one observation
     per iteration while forecasting `nahead` periods.
 
 We present the results for RO-recalibration using the standard CV
 approach for male Spanish regions. The main input parameters are set as
-follows: `trainset1 = 8`, `nahead = 5` and `fixed_train_origin = ``TRUE`
+follows: `trainset1 = 8`, `nahead = 5` and `fixed_train_origin = TRUE`
 (default value). This procedure is applied to the five multipopulation
 mortality models included in the package. To replicate these results,
 the user can use the following code:
@@ -1274,7 +1268,7 @@ the user can use the following code:
 
 While we executed to female Spanish regions an RO-recalibration was
 performed using `trainset1 = 10`, `nahead = 1` and
-`fixed_train_origin = ``TRUE` (default value). This configuration
+`fixed_train_origin = TRUE` (default value). This configuration
 corresponds to a LOOCV approach, which fixes the origin in the first
 training, using the following code:
 
