Fixed abstract and citations in RJ-2025-019

--- a/_articles/RJ-2025-019/RJ-2025-019.Rmd
+++ b/_articles/RJ-2025-019/RJ-2025-019.Rmd
@@ -1,8 +1,7 @@
 ---
 title: 'bartcs: An R Package for Bayesian Nonparametric Adjustment for Confounding'
 abstract: |
-  This article presents an overview of the
-  [bartcs](https://CRAN.R-project.org/package=bartcs) R package, which
+  This article presents an overview of the bartcs R package, which
   employs a Bayesian additive regression trees-based method for
   selecting confounders. It uses a Dirichlet distribution as a common
   variable selection probability prior, updating both the exposure and
@@ -32,8 +31,8 @@ author:
 date: '2025-09-23'
 date_received: '2024-05-24'
 journal:
-  firstpage: 175
-  lastpage: 205
+  firstpage: ~
+  lastpage: []
 volume: 17
 issue: 2
 slug: RJ-2025-019
@@ -178,7 +177,7 @@ inferences.
 
   [BayesPen](https://cran.r-project.org/package=BayesPen) [@bayespen]                R       Assume linear models (i.e., *parametric* models) for exposure and outcome. Support continuous outcome.
 
-  [CovSelHigh](https://cran.r-project.org/package=CovSelHigh) [@covselhigh]          R       Confounder selection performed via either Markov/Bayesian networks (model-free selection of confounders).
+  [CovSelHigh](https://cran.r-project.org/package=CovSelHigh) [@CovSelHigh]          R       Confounder selection performed via either Markov/Bayesian networks (model-free selection of confounders).
 
   [BART](https://cran.r-project.org/package=BART) [@BART]                            C++     Incorporate the Dirichlet sparse prior of [@linero2018bayesian] for variable selection in the BART outcome model. Support various outcome types (categorical, continuous, binary, survival outcome). *This does not primarily focus on confounder selection, but rather variable selection,* and this variable selection functionality is enabled by setting `sparse=TRUE` in `wbart` (continuous outcome) `pbart/lbart` (binary outcome) `mbart/mbart2` (categorical outcome) `surv.bart` (survival outcome) functions.
 
